--- a/Programacion_II_UTN/nbproject/project.properties
+++ b/Programacion_II_UTN/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Programacion_II
-main.class=holamundo.HolaMundo
+main.class=TP_6.Ej1.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
